--- a/app/src/templates/list.html
+++ b/app/src/templates/list.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>List Event</title>
+    <title>List Event - S'enregistrer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="public/css/main.min.css" rel="stylesheet">
@@ -26,16 +26,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/register">S'enregistrer</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/list">Liste des participants</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="/list">Liste des participants
+                <span class="sr-only">(current)</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -45,13 +45,25 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Bienvenue sur List Event</h1>
-          <p class="lead">Sur ce site vous pouvez vous inscrire à des évenements !</p>
-          <ul class="list-unstyled">
-            <li>Projet IngéSup B3 - Ynov</li>
-            <li>Par Buathier Thibault</li>
-          </ul>
+        <div class="col-lg-12">
+          <h1 class="mt-5">Liste des enregistrements</h1>
+          <form id="form_delete">
+            <table class="table" id="list_users">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Prénom</th>
+                  <th scope="col">Nom</th>
+                  <th scope="col">Adresse</th>
+                  <th scope="col">Pseudo</th>
+                  <th scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody id="tbody_table_users">
+              </tbody>
+            </table>
+            <button type="submit" class="btn btn-primary">Supprimer</button>
+          </form>
         </div>
       </div>
     </div>
@@ -60,6 +72,7 @@
     <script src="public/js/popper/popper.min.js"></script>
     <script src="public/js/jquery.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
+    <script src="public/js/list.min.js"></script>
 
   </body>
 
