add confirm deleted

--- a/app/src/templates/list.html
+++ b/app/src/templates/list.html
@@ -62,6 +62,7 @@
               <tbody id="tbody_table_users">
               </tbody>
             </table>
+            <button type="button" id="btn_select_all" class="btn btn-primary">Tout sélectionner</button>
             <button type="submit" class="btn btn-primary">Supprimer</button>
           </form>
         </div>
